# python_docker_test

./: Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
